# ModernCppCourse

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: slides.yml  ubuntu.yml  windows.yml
checkpoint_0/: main.cpp
checkpoint_1/: main.cpp
checkpoint_2/: main.cpp
checkpoint_3/: main.cpp
checkpoint_4/: main.cpp
checkpoint_5/: main.cpp
checkpoint_6/: main.cpp
checkpoint_7/: main.cpp
slides/: ModernCppCourse.md  pygments_custom.theme  test_slides.py
